Gallery: prevent annoying layout shift caused by added/removed message

--- a/view/adminhtml/web/css/source/_media-gallery.less
+++ b/view/adminhtml/web/css/source/_media-gallery.less
@@ -5,6 +5,13 @@
         z-index: 300;
     }
 
+    // Prevent gallery layout shift caused by added/removed message
+    .messages {
+        position: fixed;
+        top: 0;
+    }
+
+    // Crisp icons
     :where(body:not(.theme-m137)) & {
         .jstree-default .jstree-container-ul .jstree-anchor {
             display: inline-flex;
